This is a new commit for what I originally planned to be an amendmend

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -12,11 +12,11 @@
           alt="First slide">
 
         <div class="carousel-caption">
-          <h3>Witaj na internetowej książce kucharskiej!</h3>
-          <p>Jeśli szukasz pysznego przepisu lub pomysłu na posiłek to świetnie trafiłeś!.
+          <h1>Witaj na internetowej książce kucharskiej!</h1>
+          <h5>Jeśli szukasz pysznego przepisu lub pomysłu na posiłek to świetnie trafiłeś!.
             <br>
             Znajdź przepisy wybierając je po kategoriach lub korzystając z wbudowanej wyszukiwarki.
-            <br><a [routerLink]="'/zarejestruj'"> Załóż konto teraz!</a></p>
+            <br><a [routerLink]="'/zarejestruj'"> Załóż konto teraz!</a></h5>
         </div>
       </div>
 
@@ -25,9 +25,9 @@
           src="assets/slide2.jpg"
           alt="Second slide">
         <div class="carousel-caption">
-          <p>Po założeniu konta będziesz mógł dzielić się swoją opinią na temat przepisów w sekcji komentarzy,
+          <h5>Po założeniu konta będziesz mógł dzielić się swoją opinią na temat przepisów w sekcji komentarzy,
             <br>
-            oceniać przepisy oraz je dodawać</p>
+            oceniać przepisy oraz je dodawać</h5>
         </div>
       </div>
 
