image fixes on mobile

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -12,10 +12,9 @@
           alt="First slide">
 
         <div class="carousel-caption">
-          <h1>Witaj na internetowej książce kucharskiej!</h1>
+          <h1>Witaj w&nbsp;internetowej książce kucharskiej!</h1>
           <h5>Jeśli szukasz pysznego przepisu lub pomysłu na posiłek to świetnie trafiłeś!.
-            <br>
-            Znajdź przepisy wybierając je po kategoriach lub korzystając z wbudowanej wyszukiwarki.
+            Znajdź przepisy wybierając je po kategoriach lub korzystając z&nbsp;wbudowanej wyszukiwarki.
             <br><a [routerLink]="'/zarejestruj'"> Załóż konto teraz!</a></h5>
         </div>
       </div>
@@ -25,9 +24,7 @@
           src="assets/slide2.jpg"
           alt="Second slide">
         <div class="carousel-caption">
-          <h5>Po założeniu konta będziesz mógł dzielić się swoją opinią na temat przepisów w sekcji komentarzy,
-            <br>
-            oceniać przepisy oraz je dodawać</h5>
+          <h5>Po założeniu konta będziesz mógł dzielić się swoją opinią na temat przepisów w&nbsp;sekcji komentarzy, oceniać przepisy oraz je dodawać</h5>
         </div>
       </div>
 
