--- a/src/app/components/profile/add-recipe/add-recipe.component.html
+++ b/src/app/components/profile/add-recipe/add-recipe.component.html
@@ -6,7 +6,7 @@
       <form *ngIf="!isSucceded" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" >
 
         <div class="form-group">
-          <label for="name">Nazwa przepisu</label>
+          <label for="name">Nazwa przepisu <span class="required">&nbsp;*</span></label>
           <input type="text" class="form-control" name="name" [(ngModel)]="form.name" required minlength="3"
             #name="ngModel" />
           <div class="alert-danger" role="alert" *ngIf="f.submitted && name.invalid">
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-          <label for="preparationTime">Czas przygotowania</label>
+          <label for="preparationTime">Czas przygotowania <span class="required">&nbsp;*</span></label>
           <small>
             <p> (Podaj w minutach)</p>
           </small>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="form-group">
-          <label for="category">Kategoria przepisu</label>
+          <label for="category">Kategoria przepisu <span class="required">&nbsp;*</span></label>
           <select class="form-control" [(ngModel)]="form.category" name="category" required #category="ngModel">
             <option *ngFor="let cat of categories" [value]="cat.id">{{ cat.categoryName }}</option>
           </select>
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="difficulty">Poziom trudności przepisu</label>
+          <label for="difficulty">Poziom trudności przepisu <span class="required">&nbsp;*</span></label>
           <select class="form-control" [(ngModel)]="form.difficulty" name="difficulty" required #difficulty="ngModel">
             <option *ngFor="let dif of difficulties" [value]="dif.id">{{ dif.name }}</option>
           </select>
