--- a/src/app/components/caloric-balance/add-ingredient-to-diet/ingredients-to-diet-result/ingredients-to-diet-result.component.html
+++ b/src/app/components/caloric-balance/add-ingredient-to-diet/ingredients-to-diet-result/ingredients-to-diet-result.component.html
@@ -11,7 +11,7 @@
 
 
             <div class="form-group">
-              <label for="productName">Nazwa produktu</label>
+              <label for="productName">Nazwa produktu <span class="required">&nbsp;*</span></label>
               <select class="form-control" [(ngModel)]="form.productName" name="productName" required
                 #productName="ngModel">
                 <option *ngFor="let ingr of ingredients" [value]="ingr.id">{{ ingr.productName }}</option>
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-group">
-              <label for="unit">Jednostka</label>
+              <label for="unit">Jednostka <span class="required">&nbsp;*</span></label>
               <br>
               <small>
                 <a routerLink="/FAQ-jednostki">
@@ -43,7 +43,7 @@
             </div>
 
             <div class="form-group">
-              <label for="amount">Ilość</label> <br>
+              <label for="amount">Ilość <span class="required">&nbsp;*</span></label> <br>
               <small></small>
               <input type="number" step ="0.01" min="0" class="form-control" pattern="^\d*(\.\d(\d)?)?$"  name="amount" [(ngModel)]="form.amount" required
                 #amount="ngModel" />
