--- a/src/app/components/profile/add-recipe/add-ingredients/ingredients-result/ingredients-result.component.html
+++ b/src/app/components/profile/add-recipe/add-ingredients/ingredients-result/ingredients-result.component.html
@@ -12,7 +12,7 @@
 
 
             <div class="form-group">
-              <label for="productName">Nazwa produktu</label>
+              <label for="productName">Nazwa produktu <span class="required">&nbsp;*</span></label>
               <select class="form-control" [(ngModel)]="form.productName" name="productName" required
                 #productName="ngModel">
                 <option *ngFor="let ingr of ingredients" [value]="ingr.id">{{ingr.productName}} kal:{{ingr.calories}} b:{{ingr.proteins}} t:{{ingr.fat}} w:{{ingr.carbohydrates}}</option>
@@ -25,7 +25,7 @@
             </div>
 
             <div class="form-group">
-              <label for="unit">Jednostka</label>
+              <label for="unit">Jednostka <span class="required">&nbsp;*</span></label>
               <br>
               <small>
                   <a routerLink="/FAQ-jednostki">
@@ -44,7 +44,7 @@
             </div>
 
             <div class="form-group">
-              <label for="amount">Ilość</label> <br>
+              <label for="amount">Ilość <span class="required">&nbsp;*</span></label> <br>
               <small></small>
               <input type="number" step ="0.01" min="0" class="form-control" pattern="^\d*(\.\d(\d)?)?$"  name="amount" [(ngModel)]="form.amount" required
                 #amount="ngModel" />
