--- a/src/app/components/profile/my-recipes/edit-recipe/edit-ingredients/edit-ingredients.component.html
+++ b/src/app/components/profile/my-recipes/edit-recipe/edit-ingredients/edit-ingredients.component.html
@@ -9,7 +9,7 @@
         <form *ngIf="!isSucceded" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
 
           <div class="form-group">
-            <label for="unit">Jednostka</label>
+            <label for="unit">Jednostka <span class="required">&nbsp;*</span></label>
             <br>
               <small>
                   <a routerLink="/FAQ-jednostki">
@@ -28,7 +28,7 @@
           </div>
 
           <div class="form-group">
-            <label for="amount">Ilość</label> <br>
+            <label for="amount">Ilość <span class="required">&nbsp;*</span></label> <br>
             <small></small>
             <input type="number" step ="0.01" min="0" class="form-control" pattern="^\d*(\.\d(\d)?)?$"  name="amount" [(ngModel)]="form.amount" required
               #amount="ngModel" />
