--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,7 +8,7 @@
       <br />
       <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
         <div class="form-group">
-          <label for="username">Nazwa użytkownika</label>
+          <label for="username">Nazwa użytkownika <span class="required">&nbsp;*</span></label>
           <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required minlength="3"
             maxlength="20" #username="ngModel" />
           <div class="alert-danger" *ngIf="f.submitted && username.invalid">
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="email">Email <span class="required">&nbsp;*</span></label>
           <input type="email" class="form-control" name="email" [(ngModel)]="form.email" required email
             #email="ngModel" />
           <div class="alert-danger" *ngIf="f.submitted && email.invalid">
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="password">Hasło</label>
+          <label for="password">Hasło <span class="required">&nbsp;*</span></label>
           <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required minlength="6"
             #password="ngModel" />
           <div class="alert-danger" *ngIf="f.submitted && password.invalid">
