--- a/src/app/components/shopping-list/edit-dialog/edit-dialog.component.html
+++ b/src/app/components/shopping-list/edit-dialog/edit-dialog.component.html
@@ -5,7 +5,7 @@
 <form *ngIf="!isSucceded" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm">
   <div class="form-group">
     <br />
-    <label for="name">Nazwa produktu</label>
+    <label for="name">Nazwa produktu <span class="required">&nbsp;*</span></label>
     <input type="text" class="form-control" name="name" [(ngModel)]="form.name" required minlength="3"
       #name="ngModel" />
     <div class="alert-danger" role="alert" *ngIf="f.submitted && name.invalid">
@@ -19,7 +19,7 @@
   </div>
 
   <div class="form-group">
-    <label for="quantity">Ilość</label> <br>
+    <label for="quantity">Ilość <span class="required">&nbsp;*</span></label> <br>
     <input type="number" step ="1" min="1" class="form-control" pattern="^\d+$" name="quantity" [(ngModel)]="form.quantity" required
       #quantity="ngModel" />
     <div class="alert-danger" role="alert" *ngIf="f.submitted && quantity.invalid">
