--- a/src/app/components/profile/add-recipe/add-ingredients/ingredients-result/add-ingredient-to-database/add-ingredient-to-database.component.html
+++ b/src/app/components/profile/add-recipe/add-ingredients/ingredients-result/add-ingredient-to-database/add-ingredient-to-database.component.html
@@ -116,4 +116,4 @@
   </div>
 
 </div>
-<ng-template #loggedOut> Zaloguj się !</ng-template>
+<ng-template #loggedOut><br><div class="col-md-12 alert alert-warning mt-3 text-center">Zaloguj się!</div></ng-template>
