--- a/src/app/components/profile/add-step/add-step.component.html
+++ b/src/app/components/profile/add-step/add-step.component.html
@@ -44,6 +44,6 @@
       <div class="col"></div>
     </div>
   </div>
-  <ng-template #notAuthor> To nie twój przepis !</ng-template>
+  <ng-template #notAuthor><br><div class="col-md-12 alert alert-warning mt-3 text-center">To nie twój przepis!</div></ng-template>
 </div>
-<ng-template #loggedOut> Zaloguj się !</ng-template>
+<ng-template #loggedOut><br><div class="col-md-12 alert alert-warning mt-3 text-center">Zaloguj się!</div></ng-template>
