--- a/src/app/components/caloric-balance/caloric-balance.component.html
+++ b/src/app/components/caloric-balance/caloric-balance.component.html
@@ -1,4 +1,12 @@
-  <div class="col-lg">
+<ngx-spinner type="la-square-jelly-box" size="default" bdColor="rgba(51, 51, 51, 0.8)">
+  <div style="color: #64d6e2" class="la-square-jelly-box la-3x">
+    <div></div>
+    <div></div>
+  </div>
+  <br />
+  <p style="color: white">Proszę czekać...</p>
+</ngx-spinner>
+  <div class="col-lg" *ngIf="currentUser; else loggedOut">
     <div class="title">
     </div>
     <div class="card mt-4">
@@ -111,3 +119,4 @@
         </div>
       </div>
     </div>
+    <ng-template #loggedOut> <br><div class="col-md-12 alert alert-warning mt-3 text-center">Zaloguj się!</div></ng-template>
