--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,6 +3,7 @@
   <div class="col-12">
     <br />
     <div class="card card-container align-items-center">
+      <br>
       <i class="fas fa-user-circle fa-7x"></i>
       <h1>Logowanie</h1>
       <br />
@@ -14,21 +15,22 @@
         novalidate
       >
         <div class="form-group">
-          <label for="username">Nazwa użytkownika</label>
+          <label for="email">Email użytkownika</label>
           <input
-            type="text"
+            type="email"
             class="form-control"
-            name="username"
-            [(ngModel)]="form.username"
+            name="email"
+            ngModel email
+            [(ngModel)]="form.email"
             required
-            #username="ngModel"
+            #email="ngModel"
           />
           <div
             class="alert-danger"
             role="alert"
-            *ngIf="f.submitted && username.invalid"
+            *ngIf="f.submitted && email.invalid"
           >
-            Nazwa użytkownika jest wymagana
+          Wprowadź poprawny adres email
           </div>
         </div>
         <div class="form-group">
@@ -61,6 +63,15 @@
         <div class="d-flex justify-content-center">
           <div class="form-group">
             <a
+              [routerLink]="'/reset'"
+              class="justify-content-center align-self-center"
+              ><small>Zapomniałeś/-aś hasła? Zresetuj hasło</small> <br
+            /></a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="form-group">
+            <a
               [routerLink]="'/zarejestruj'"
               class="justify-content-center align-self-center"
               ><small>Nie masz jeszcze konta? Zarejestruj się</small> <br
@@ -80,7 +91,7 @@
           Logowanie powiodło się!
         </div>
         <div class="d-flex justify-content-center">
-          <button [routerLink]="'/profil'" class="btn btn-secondary btn-sm">
+          <button [routerLink]="'/profil/mojeprzepisy'" class="btn btn-secondary btn-sm">
             Przejdź dalej
           </button>
         </div>
