--- a/src/app/components/profile/add-recipe/add-recipe.component.html
+++ b/src/app/components/profile/add-recipe/add-recipe.component.html
@@ -93,4 +93,4 @@
     <div class="col"></div>
   </div>
 </div>
-<ng-template #loggedOut> Zaloguj się !</ng-template>
+<ng-template #loggedOut><br><div class="col-md-12 alert alert-warning mt-3 text-center">Zaloguj się!</div> </ng-template>
