--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -12,11 +12,11 @@
     <strong>Email:</strong>
     {{ user.email }}
   </p>
-  <p>
+  <p *ngIf="user.firstName">
     <strong>Imię:</strong>
     {{ user.firstName }}
   </p>
-  <p>
+  <p *ngIf="user.lastName">
     <strong>Nazwisko:</strong>
     {{ user.lastName }}
   </p>
@@ -25,8 +25,11 @@
   <a type="button" class="btn btn-success mr-1" routerLink="/profil/edit/{{ currentUser.id }}">
     Edytuj dane użytkownika <i class="fas fa-user-edit"></i>
   </a>
+  <a type="button" class="btn btn-success mr-1" routerLink="/profil/editkalorii/{{ currentUser.id }}">
+    Edytuj dane kaloryczne użytkownika <i class="fas fa-weight"></i>
+  </a>
   <button [routerLink]="'/profil/dieta'" type="button" class="btn btn-success mr-1">Bilans kaloryczny <i class="fas fa-balance-scale-left"></i></button>
 </div>
 <br>
 
-<ng-template #loggedOut> Zaloguj się !</ng-template>
+<ng-template #loggedOut> <br><div class="col-md-12 alert alert-warning mt-3 text-center">Zaloguj się!</div></ng-template>
