--- a/src/app/components/profile/edit-calories/edit-calories.component.html
+++ b/src/app/components/profile/edit-calories/edit-calories.component.html
@@ -26,7 +26,7 @@
                 [responsive]="chartOptions.responsive"
               ></apx-chart>
             </div>
-            <div *ngIf="this.form.calories"><a (click)="setExampleCalories()"><small>Ustaw standardowy podział</small></a></div>
+            <div class="d-flex justify-content-center" *ngIf="this.form.calories"><a (click)="setExampleCalories()"><span class="badge badge-info">Ustaw standardowy podział</span></a></div>
             <div style="display: inline-flex;">
               <div *ngIf="this.calProc > 0 && form.calories !== null && form.fat !== null
               && form.proteins !== null && form.carbohydrates !== null">
@@ -44,10 +44,10 @@
                   Zły format danych
                 </div>
               </div>
-              <div class="alert-danger" role="alert" *ngIf="f.submitted && form.calories < 1000">
+              <div class="alert-danger" role="alert" *ngIf="f.submitted && form.calories < 1000 && form.calories != null">
                 Minimum kalorii to 1000
               </div>
-              <div class="alert-danger" role="alert" *ngIf="f.submitted && proc">
+              <div class="alert-danger" role="alert" *ngIf="f.submitted && proc && form.calories != null">
                 Suma Kalorii musi wynosić 100%
               </div>
           </div>
