--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -1,3 +1,16 @@
 .h-100 {
   padding-left: 0px;
 }
+
+@media (max-width: 992px) {
+  .filtr {
+    padding-left: 0px;
+    padding-top: 8px;
+  }
+}
+
+@media (min-width: 992px) {
+  .filtr {
+    padding-left: 5px;
+  }
+}
